--- a/05_19_welcome/css/ex.css
+++ b/05_19_welcome/css/ex.css
@@ -41,7 +41,7 @@
 }
 
 .welcome {
-    font-size: 100px;
+    font-size: 10vw;
     font-weight: 700;
     animation: welcome-move 5s;
 }
@@ -58,10 +58,10 @@ h2 {
 
 a {
     display: flex;
-    width: 300px;
+    width: 60%;
     justify-content: space-between;
     align-items: center;
-    font-size: 40px;
+    font-size: 30px;
     border: 3px solid white;
     padding: 10px 30px;
     color: white;
