--- a/07_27_fullpage_ex/html/css/a.css
+++ b/07_27_fullpage_ex/html/css/a.css
@@ -51,6 +51,7 @@ li a{
 }
 .inner-box {
 	width: 80%; margin: auto;
+	max-width: 100%;
     display: flex;
 	flex-direction: row;
     justify-content: center;
@@ -69,14 +70,13 @@ li a{
 	color:antiquewhite;
 }
 
-@media (max-width: 770px) {
-    #section1 .inner-box, #section3 .inner-box,
-	#section2 .inner-box, #section4 .inner-box
+@media(max-width: 1000px) {
+    .inner-box
 	{
-		flex-direction: column;
-		width: 80%;
+		display: block;
+		width: 60%;
     }
 	.inner-box img {width: 60%;}
 	.inner-box .text_box {width: 100%;}
-	h1 {font-size: 6vw;} p{font-size: 3vw;}
+	h1 {font-size: 5vw;} p{font-size: 3vw;}
 }
