07/31, 반응형 웹 디자인

--- a/05_17_ex/css/ex.css
+++ b/05_17_ex/css/ex.css
@@ -18,6 +18,7 @@ ul {display: flex;}
 li {
     padding: 20px;
     list-style: none;
+    font-size: 16px;
 }
 
 .upper-box {position: relative;}
@@ -40,4 +41,8 @@ p {padding: 0 30px;}
 .submenu>li:hover {
     background-color: aliceblue;
     color: black;
+}
+
+@media (max-width: 800px) {
+    li {font-size: 10px;}
 }
