--- a/07_03_timer/css/ex.css
+++ b/07_03_timer/css/ex.css
@@ -10,11 +10,16 @@
     /* font-family: 'MBC1961GulimM'; */
 }
 
+section {
+    position: relative;
+    width: 90%; margin: 30px auto;
+}
+
 .time_box {
     background-color: aliceblue;
-    width: 500px;
+    width: 100%;
     height: 300px;
-    margin: 50px auto 30px auto;
+    margin-bottom: 30px;
     line-height: 300px;
     text-align: center;
     font-size: 50px;
@@ -24,26 +29,42 @@
     display: flex;
     justify-content: center;
     background-color: antiquewhite;
-    width: 500px;
+    width: 100%;
     margin: auto;
 }
 
 button {
     padding: 20px;
     margin: 10px;
-    width: 100px;
+    width: 20%; max-width: 150px;
     color: white;
     border: none;
+    font-size: 20px;
+}
+button:hover {
+    color: yellow;
 }
 
 #start {background-color: red;}
 #stop {background-color: blue;}
 #record {background-color:limegreen}
 
+
 .rec {
     background-color:beige;
-    width: 500px;
+    width: 100%;
     margin: 30px auto;
     list-style: none;
+    max-height: 221.2px;
+    overflow: auto;
+}
+.rec::-webkit-scrollbar {width: 10px;}
+.rec::-webkit-scrollbar-thumb {
+    background-color: #2f3542;
+    border-radius: 10px;
+}
+.rec::-webkit-scrollbar-track {
+    background-color: grey;
+    border-radius: 10px;
 }
 .rec li {padding: 5px;}
