--- a/07_25_swiper_ex/css/ex.css
+++ b/07_25_swiper_ex/css/ex.css
@@ -11,6 +11,7 @@
 .navi_right {
     position: relative; width: 70%;
     display: flex; justify-content: center;
+    max-width: 650px;
 }
 h3 {font-weight: 400;margin-bottom: 20px; margin-top: 5px;}
 .navi_left>p {margin-bottom: 20px; font-size: 13px;}
