--- a/07_31_grid_ex/html/css/index.css
+++ b/07_31_grid_ex/html/css/index.css
@@ -1,10 +1,10 @@
 * {margin: 0; padding: 0;}
 
 .header {
-    width: 100vw; height: 100px;
+    width: 100vw; height: 80px; 
 }
 .header .logo .logo-box{
-    height: 50px;
+    height: 40px;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
@@ -15,7 +15,7 @@
     align-items: center;
 }
 .header .logo h1{font-size: 28px;}
-.header .logo .logo-right {display: flex; justify-content: center; height: 50px;}
+.header .logo .logo-right {display: flex; justify-content: center; height: 40px;}
 .header .logo .logo-right>div {
     display: flex; justify-content: center; align-items: center;
     font-size: 8px; margin: 5px;
@@ -25,11 +25,11 @@
 .header .logo .logo-right button {
     font-size: 8px;
     background-color: #79acd1; color: white; border: none;
-    width: 80px; height: 40px; margin: 5px; padding: 0px;
+    width: 70px; height: 30px; margin: 5px; padding: 0px;
 }
 
 .header .menu {
-    height: 50px;
+    height: 40px;
     background-color: #111111;
 }
 .header .menu .menu-box {
@@ -38,20 +38,50 @@
     justify-content: space-between;
     align-items: center;
 }
-.header .menu ul {
+.header .menu .menu-box ul {
+    height: 100%;
     list-style: none;
     display: flex;
 }
-.header .menu ul li {
-    padding: 10px;
+.header .menu .menu-box ul li {
+    cursor: pointer;
+    position: relative;
+    transform: translateX(-10px);
+    height: 100%;
+    padding: 0 10px;
     color: #999999;
+    line-height: 40px;
+    z-index: 100;
 }
-.header .menu ul li:hover {color: white;}
-.header .menu i {color: #999999;}
-.header .menu i:hover {color: white;}
+.header .menu .menu-box>ul>.bigmenu:first-child {
+    color: #ffffff;
+}
+.header .menu .menu-box ul li .submenu {
+    position: absolute; left: 0px;
+    display: none;  z-index: 90;
+    height: auto;
+}
+.header .menu .menu-box ul li .submenu li {
+    cursor: pointer;
+    color: #333333; 
+    background-color:aliceblue;
+    text-align: center;
+    line-height: 30px;
+    height: 30px;
+}
+.header .menu .menu-box .icon-list>i {color: #999999;}
+.header .menu .menu-box>i {color: #999999; display: none;}
+
+.header .menu .menu-box ul li:hover {color: white; background-color: #333333;}
+.header .menu .menu-box ul li:hover .submenu {display: block;}
+.header .menu .menu-box ul li .submenu li:hover {color:#3B719F;}
+.header .menu .menu-box .icon-list>i:hover {color: #000000;}
+.header .menu .menu-box i:hover {color: white;}
+
 
 .nav {
-    width: 100%; height: 400px;
+    position: relative;
+    width: 100%; height: 400px; z-index: 1;
 }
 .nav .mySwiper {
     height: 400px;
@@ -102,18 +132,17 @@
 .swiper-slide-active h2 {animation: text_slide_right 1s;}
 .swiper-slide-active button {animation: fade_in 1s;}
 
-.grid-section {width: 700px; margin: 60px auto 60px auto;}
 .grid-section h1 {font-size: 30px;}
 .grid-section .grid-wrapper {
-    display: grid; margin: 30px auto;
-    width: 100%; height: 270px;
+    display: grid; margin: 7vw auto;
+    width: 100%; height: 25vw;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 2vw;
 }
 .grid-section .grid-box {
     position: relative;
-    border: 3px solid #9999bb;
+    border: 5px solid #9999bb;
 }
 .grid-section .grid-box:hover {
     border-color: rgba(0, 0, 0, 0);
@@ -122,19 +151,21 @@
 }
 .grid-section .grid-wrapper i {
     position: absolute;
-    left: 0; top: 25%;
+    left: 0; top: 25%; left: 5%;
     color: #3B719F;
-    margin: 15px; transform: translateY(-70%);
 }
-.grid-section .grid-wrapper h2 { 
-    position: absolute; left: 21%; top: 7%;
-    margin: 15px;
-    font-size: 20px;
+.grid-section .grid-wrapper .text-box {
+    position: absolute; left: 30%; height: 100%; width: 70%;
 }
-.grid-section .grid-wrapper p {
-    position: absolute; left: 21%; top: 39%;
-    margin: 15px;
-    font-size: 10px;
+.grid-section .grid-wrapper .text-box h2 { 
+    position: absolute;
+    font-size: 2vw; top: 15%;
+    padding-right: 5px;
+}
+.grid-section .grid-wrapper .text-box p {
+    position: absolute;
+    font-size: 1vw; top: 50%;
+    padding-right: 5px;
 }
 
 .exp {
@@ -260,8 +291,8 @@
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
     }
-    .grid-section .grid-wrapper h2 {left: 16%}
-    .grid-section .grid-wrapper p {left: 16%}
+    .grid-section .grid-wrapper .text-box h2 {font-size: 20px;}
+    .grid-section .grid-wrapper .text-box p {font-size: 10px;}
 
     .exp {margin-bottom: 30px;}
 
@@ -283,8 +314,7 @@
         grid-template-rows: repeat(6, 1fr);
         grid-template-columns: repeat(1, 1fr);
     }
-    .grid-section .grid-wrapper h2 {left: 21%}
-    .grid-section .grid-wrapper p {left: 21%}
+    
 
     .nav h2 {font-size: 12px;}
 
