--- a/07_31_grid_ex/html/css/index.css
+++ b/07_31_grid_ex/html/css/index.css
@@ -1,8 +1,11 @@
 * {margin: 0; padding: 0;}
-
-.header {
-    width: 100vw; height: 80px; 
+.body {position: relative; width: 100vw;}
+.wrapper {
+    position: absolute; left: 0; top: 0;
+    width: 100%; overflow-x: hidden;
 }
+
+.header {width: 100vw; height: 80px; }
 .header .logo .logo-box{
     height: 40px;
     box-sizing: border-box;
@@ -38,12 +41,12 @@
     justify-content: space-between;
     align-items: center;
 }
-.header .menu .menu-box ul {
+.header .menu .menu-box .text-menu {
     height: 100%;
     list-style: none;
     display: flex;
 }
-.header .menu .menu-box ul li {
+.header .menu .menu-box .text-menu li {
     cursor: pointer;
     position: relative;
     transform: translateX(-10px);
@@ -53,15 +56,15 @@
     line-height: 40px;
     z-index: 100;
 }
-.header .menu .menu-box>ul>.bigmenu:first-child {
+.header .menu .menu-box>.text-menu>.bigmenu:first-child {
     color: #ffffff;
 }
-.header .menu .menu-box ul li .submenu {
+.header .menu .menu-box .text-menu li .submenu {
     position: absolute; left: 0px;
     display: none;  z-index: 90;
-    height: auto;
+    height: auto; list-style: none;
 }
-.header .menu .menu-box ul li .submenu li {
+.header .menu .menu-box .text-menu li .submenu li {
     cursor: pointer;
     color: #333333; 
     background-color:aliceblue;
@@ -69,7 +72,20 @@
     line-height: 30px;
     height: 30px;
 }
-.header .menu .menu-box .icon-list>i {color: #999999;}
+.header .menu .menu-box .icon-menu {
+    height: 100%;
+    list-style: none;
+    display: flex;
+}
+.header .menu .menu-box .icon-menu i {
+    cursor: pointer;
+    position: relative;
+    height: 100%;
+    padding: 0 5px;
+    color: #999999;
+    line-height: 40px;
+    z-index: 100;
+}
 .header .menu .menu-box>i {color: #999999; display: none;}
 
 .header .menu .menu-box ul li:hover {color: white; background-color: #333333;}
@@ -81,10 +97,10 @@
 
 .nav {
     position: relative;
-    width: 100%; height: 400px; z-index: 1;
+    width: 100%; height: 40vw; z-index: 1;
 }
 .nav .mySwiper {
-    height: 400px;
+    height: 100%;
 }
 .nav .swiper-slide {
     width: 100%; height: 100%;
@@ -142,7 +158,7 @@
 }
 .grid-section .grid-box {
     position: relative;
-    border: 5px solid #9999bb;
+    border: 3px solid #9999bb;
 }
 .grid-section .grid-box:hover {
     border-color: rgba(0, 0, 0, 0);
@@ -246,25 +262,66 @@
 }
 
 .footer {
-    width: 100%; height: 40px;
+    width: 100%; height: 220px;
     background-color: #999999;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
+.footer h2 {font-size: 15px; color: white; padding: 20px;}
 .footer ul {
     list-style: none;
     display: flex;
+    flex-direction: column;
 }
 .footer ul li {
     padding: 10px;
-    color: #bbbbbb;
-    font-size: 15px;
+    color: #cccccc;
+    font-size: 10px;
 }
+.footer .input-wrapper {
+    display: flex; justify-content: center; align-items: center;
+}
+.footer .input-wrapper input {height: 25px; margin: 5px;}
+.footer .input-wrapper button {height: 25px; margin: 5px;}
+
 .footer p {
     font-size: 12px;
-    color: #bbbbbb;
-    padding-right: 25px;
+    color: #cccccc;
+    padding: 10px
+}
+
+.popup {
+    position: absolute;
+    top: 0; left: 110vw; z-index: 200;
+    width: 100vw; height: 100%;
+    background-color: black;
+}
+.popup i {
+    position: absolute; top: 15px; right: 25px;
+    color: white;
+}
+.popup>ul {
+    list-style: none; color: #dddddd;
+}
+.popup>ul li {
+    padding: 20px;
+}
+
+.subpopup {
+    position: absolute;
+    top: 0; left: 110vw; z-index: 250;
+    width: 100vw; height: 100%;
+    background-color: #aaaaaa;
+    list-style: none;
+}
+.subpopup h2{font-size: 24px; padding: 20px;}
+.subpopup i {
+    position: absolute; top: 15px; right: 25px;
+    color: black;
+}
+.subpopup>ul li {
+    padding: 20px;
 }
 
 .on {color: #0e37cc;}
@@ -283,6 +340,8 @@
 @keyframes fade_in {0% {opacity: 0;} 100% {opacity: 1;}}
 
 @media (max-width: 800px) {
+
+    .nav {height: 400px;}
 
     .grid-section {width: 600px;}
     .grid-section .grid-wrapper {
@@ -306,7 +365,10 @@
     .header .logo .logo-right>div {font-size: 8px; margin: 2px; max-width: 72px;}
     .header .logo .logo-right button {margin: 5px;}
 
-    .header .menu ul li {padding: 5px; font-size: 12px;}
+    .header .menu .menu-box .text-menu li {padding: 0 5px; font-size: 12px;}
+
+    .header .menu .menu-box>i {display: block;}
+    .header .menu .menu-box .icon-menu {display: none;}
 
     .grid-section {width: 230px; margin-bottom: 20px;}
     .grid-section .grid-wrapper {
@@ -314,7 +376,6 @@
         grid-template-rows: repeat(6, 1fr);
         grid-template-columns: repeat(1, 1fr);
     }
-    
 
     .nav h2 {font-size: 12px;}
 
@@ -325,8 +386,10 @@
     .tab-section .text-box>p {font-size: 9px; min-height: 75px;}
     .tab-section .box-link {min-width: 100px;}
 
-    .footer ul li {font-size: 8px; padding: 5px;}
-    .footer p {font-size: 6px;}
+    /* .footer ul li {font-size: 8px; padding: 5px;}
+    .footer p {font-size: 6px;} */
+    .footer {height: 150px;}
+    .footer .footer-box {display: none;}
 
     .inner {width: 90%;}
 }
