--- a/07_31_grid_ex/html/css/index.css
+++ b/07_31_grid_ex/html/css/index.css
@@ -90,7 +90,7 @@
 
 .header .menu .menu-box ul li:hover {color: white; background-color: #333333;}
 .header .menu .menu-box ul li:hover .submenu {display: block;}
-.header .menu .menu-box ul li .submenu li:hover {color:#3B719F;}
+.header .menu .menu-box ul li .submenu li:hover {color: #79acd1;}
 .header .menu .menu-box .icon-list>i:hover {color: #000000;}
 .header .menu .menu-box i:hover {color: white;}
 
@@ -181,7 +181,7 @@
 .grid-section .grid-wrapper .text-box p {
     position: absolute;
     font-size: 1vw; top: 50%;
-    padding-right: 5px;
+    padding: 0 5px;
 }
 
 .exp {
@@ -264,11 +264,13 @@
 .footer {
     width: 100%; height: 220px;
     background-color: #999999;
+    color: #cccccc;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-.footer h2 {font-size: 15px; color: white; padding: 20px;}
+.footer h2 {font-size: 24px; padding: 20px;}
+.footer>h2 {font-size: 35px;}
 .footer ul {
     list-style: none;
     display: flex;
@@ -276,18 +278,19 @@
 }
 .footer ul li {
     padding: 10px;
-    color: #cccccc;
-    font-size: 10px;
+    
+    font-size: 15px;
 }
 .footer .input-wrapper {
     display: flex; justify-content: center; align-items: center;
 }
 .footer .input-wrapper input {height: 25px; margin: 5px;}
-.footer .input-wrapper button {height: 25px; margin: 5px;}
-
+.footer .input-wrapper button {
+    height: 27px; margin: 5px; padding: 2px;
+    border: 1px solid black;
+}
 .footer p {
-    font-size: 12px;
-    color: #cccccc;
+    font-size: 15px;
     padding: 10px
 }
 
@@ -339,11 +342,23 @@
 }
 @keyframes fade_in {0% {opacity: 0;} 100% {opacity: 1;}}
 
+@media (max-width: 1200px) {
+    .footer h2 {font-size: 15px; padding: 20px;}
+    .footer>h2 {font-size: 20px;}
+    .footer ul li {
+        padding: 10px;
+        font-size: 10px;
+    }
+    .footer p {
+        font-size: 12px;
+        padding: 10px
+    }
+}
 @media (max-width: 800px) {
 
     .nav {height: 400px;}
 
-    .grid-section {width: 600px;}
+    .grid-section {width: 560px;}
     .grid-section .grid-wrapper {
         height: 405px;
         grid-template-rows: repeat(3, 1fr);
@@ -362,7 +377,7 @@
 
     .header .logo h1 {font-size: 20px;}
     .header .logo .logo-box {padding: 0;}
-    .header .logo .logo-right>div {font-size: 8px; margin: 2px; max-width: 72px;}
+    .header .logo .logo-right>div {display: none;}
     .header .logo .logo-right button {margin: 5px;}
 
     .header .menu .menu-box .text-menu li {padding: 0 5px; font-size: 12px;}
