--- a/study_react/src/style/MyModal.css
+++ b/study_react/src/style/MyModal.css
@@ -1,9 +1,10 @@
-.modal {
-    position: fixed; width: 100vw; height: 100vh;
+.my-modal {
+    position: fixed; 
+    width: 100vw; height: 100vh;
     left: 0; top: 0;
     background-color: rgba(0, 0, 0, 0.5);
 }
-.modal .inner-box {
+.my-modal .inner-box {
     position: fixed; top: 50%; left: 50%;
     transform: translate(-50%, -50%);
     width: 200px; height: 200px;
@@ -14,6 +15,6 @@
     text-align: center;
 }
 
-.modal .inner-box h2 {margin: 30px;}
-.modal .inner-box p {margin: 30px;}
-.modal .inner-box i {position: fixed; top: 20px; right: 20px;}
+.my-modal .inner-box h2 {margin: 30px;}
+.my-modal .inner-box p {margin: 30px;}
+.my-modal .inner-box i {position: fixed; top: 20px; right: 20px;}
